Bug 827961: Add explicit parens around condition in nsHTMLMediaElement::UpdateAudioChannelPlayingState(), to fix build warning (treated as error in warnings-as-errors builds). r=roc a=bustage